--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -10,4 +10,5 @@ RUN CGO_ENABLED=0 go build -o /go/bin/app
 FROM gcr.io/distroless/static-debian12
 
 COPY --from=build /go/bin/app /
+EXPOSE 8080
 CMD ["/app"]
