--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -55,11 +55,18 @@ tasks:
       - sed -e "s/PROJECT_ID/${GOOGLE_CLOUD_PROJECT}/g" doc/clouddeploy.yml | sed -e "s/REGION/asia-northeast1/g" | sed -e "s/SERVICE_NAME/cnsrun-frontend/g" > /tmp/clouddeploy_frontend.yml
       - gcloud deploy apply --file=/tmp/clouddeploy_frontend.yml --region asia-northeast1
 
+  deploy-batch:
+    desc: Apply Cloud Deploy pipeline for batch
+    cmds:
+      - sed -e "s/PROJECT_ID/${GOOGLE_CLOUD_PROJECT}/g" doc/clouddeploy.yml | sed -e "s/REGION/asia-northeast1/g" | sed -e "s/SERVICE_NAME/cnsrun-batch/g" > /tmp/clouddeploy_batch.yml
+      - gcloud deploy apply --file=/tmp/clouddeploy_batch.yml --region asia-northeast1
+
   deploy-all:
     desc: Apply Cloud Deploy pipelines for all services
     cmds:
       - task: deploy-backend
       - task: deploy-frontend
+      - task: deploy-batch
 
   run-deploy-frontend:
     desc: Deploy frontend to Cloud Run
@@ -133,8 +140,23 @@ tasks:
         --substitutions=_DEPLOY_ENV=main \
         --service-account=projects/${GOOGLE_CLOUD_PROJECT}/serviceAccounts/cnsrun-cloudbuild@${GOOGLE_CLOUD_PROJECT}.iam.gserviceaccount.com
 
+  create-trigger-batch:
+    desc: Create Cloud Build trigger for batch
+    cmds:
+      - |
+        gcloud beta builds triggers create github \
+        --name=cnsrun-batch-trigger \
+        --region=asia-northeast1 \
+        --repository="projects/cloudrun-hands-on-473403/locations/asia-northeast1/connections/dev-cloudrun-handson-infra/repositories/dev-cnsrun-app" \
+        --branch-pattern=^main$ \
+        --build-config=app/batch/cloudbuild_push.yaml \
+        --included-files=app/batch/** \
+        --substitutions=_DEPLOY_ENV=main \
+        --service-account=projects/${GOOGLE_CLOUD_PROJECT}/serviceAccounts/cnsrun-cloudbuild@${GOOGLE_CLOUD_PROJECT}.iam.gserviceaccount.com
+
   create-trigger-all:
     desc: Create Cloud Build triggers for all services
     cmds:
       - task: create-trigger-backend
       - task: create-trigger-frontend
+      - task: create-trigger-batch
