--- a/app/frontend/cloudbuild_push.yaml
+++ b/app/frontend/cloudbuild_push.yaml
@@ -28,16 +28,29 @@ steps:
         cd app/${_SERVICE_NAME}/
         _IMAGE_DIGEST=$(cat artifacts.json | jq -r .builds[0].tag | cut -f 2 -d "@")
         echo "IMAGE_DIGEST: $$_IMAGE_DIGEST"
-        gcloud beta container binauthz attestations sign-and-create \
+
+        ARTIFACT_URL="$${SKAFFOLD_DEFAULT_REPO}/frontend@$${_IMAGE_DIGEST}"
+
+        # 既存のattestationをチェック
+        if gcloud beta container binauthz attestations list \
           --project=$PROJECT_ID \
-          --artifact-url=$${SKAFFOLD_DEFAULT_REPO}/frontend@$${_IMAGE_DIGEST} \
           --attestor=cnsrun-attestor \
           --attestor-project=$PROJECT_ID \
-          --keyversion-project=$PROJECT_ID \
-          --keyversion-location=$_REGION \
-          --keyversion-keyring=cnsrun-keyring \
-          --keyversion-key=cnsrun-attestor-key \
-          --keyversion=1
+          --artifact-url="$$ARTIFACT_URL" 2>/dev/null | grep -q "$$_IMAGE_DIGEST"; then
+          echo "Attestationが既に存在します。スキップします。"
+        else
+          echo "Attestationを作成します"
+          gcloud beta container binauthz attestations sign-and-create \
+            --project=$PROJECT_ID \
+            --artifact-url="$$ARTIFACT_URL" \
+            --attestor=cnsrun-attestor \
+            --attestor-project=$PROJECT_ID \
+            --keyversion-project=$PROJECT_ID \
+            --keyversion-location=$_REGION \
+            --keyversion-keyring=cnsrun-keyring \
+            --keyversion-key=cnsrun-attestor-key \
+            --keyversion=1
+        fi
 
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk:slim"
     id: deploy
