--- a/app/frontend/cloudrun.yaml
+++ b/app/frontend/cloudrun.yaml
@@ -22,7 +22,7 @@ spec:
       - image: frontend
         env:
           - name: BACKEND_FQDN
-            value: "https://cnsrun-backend-6okavf474q-an.a.run.app" # FIXME: Change BACKEND_FQDN value after backend resources is created
+            value: "https://cnsrun-backend-412410043737.asia-northeast1.run.app" # FIXME: Change BACKEND_FQDN value after backend resources is created
         ports:
         - name: http1
           containerPort: 8080
