--- a/app/frontend/cloudrun.yaml
+++ b/app/frontend/cloudrun.yaml
@@ -13,7 +13,7 @@ spec:
         autoscaling.knative.dev/maxScale: '2'
         run.googleapis.com/execution-environment: gen2
         run.googleapis.com/network-interfaces: '[{"network":"cnsrun-app", "subnetwork":"cnsrun-cloudrun-hands-on-473403"}]'
-        run.googleapis.com/vpc-access-egress: private-ranges-only
+        run.googleapis.com/vpc-access-egress: all-traffic
     spec:
       containerConcurrency: 10
       timeoutSeconds: 300
